Add layouts for tablet

--- a/composeApp/src/commonMain/composeResources/files/help.html
+++ b/composeApp/src/commonMain/composeResources/files/help.html
@@ -1,5 +1,7 @@
 <h1>Currency Strength Indicator</h1>
 
+<body style="background-color:black;color:white">
+
 <p>This application provides a chart of <a href="http://en.wikipedia.org/wiki/Absolute_currency_strength">Absolute Currency Strength</a> with the time periods and sample sizes configurable.</p>
 
 <p>It works in both landscape and portrait mode, though landscape is recommended - the currency movements can seem a little more exciting than they actually are when squashed in portrait mode.</p>
@@ -17,3 +19,4 @@
 
 <p>Alerts are handled through Google Cloud Messaging, not by polling - therefore an M1 alert will not be particularly battery heavy, as it is not actually checking every 1 minute, the server is.</p>
 
+</body>
